# osu-server-connector

./: .eslintrc.cjs  .gitignore  .prettierrc.cjs  LICENSE  README.md  index.html  package.json  splashscreen.html  tsconfig.json
locales/: en.yml  zh-CN.yml
public/: manifest.json
public/css/: fonts.css  index.css  splashscreen.css  vars.css
public/locales/: en.yml
src/: App.tsx  i18n.ts  index.tsx  routes.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.yml  zh-CN.yml
src-tauri/src/: commands.rs  constants.rs  error.rs  logs.rs  main.rs  utils.rs
src/components/: Card.tsx  ControlButtons.tsx  CustomButton.tsx  DarkMode.tsx  DarkModeSwitcher.tsx  DefaultImage.tsx  Fallback.tsx  LanguageSwitcher.tsx  ServerItem.tsx  ServerList.tsx  Sidebar.tsx  ToggleButton.tsx  ToggleDarkMode.tsx
src/components/app/: AppContent.tsx  AppFrameBottom.tsx  AppFrameMiddle.tsx  AppFrameSidebar.tsx  AppFrameTop.tsx  AppRouter.tsx
src/components/frames/: AppContent.tsx  AppFrameBottom.tsx  AppFrameLeft.tsx  AppFrameMiddle.tsx  AppFrameTop.tsx
src/components/icons/: Add.tsx  Code.tsx  Cog.tsx  Github.tsx  Home.tsx  Language.tsx  Moon.tsx  Refresh.tsx  Server.tsx  Sun.tsx  WindowClose.tsx  WindowMaximize.tsx  WindowMinimize.tsx
src/contexts/: appContext.ts
src/hooks/: useI18n.tsx  useLocalForage.tsx
src/providers/: AppProvider.tsx
src/utils/: app.ts  common.ts  contants.ts  i18n.ts
src/views/: Config.tsx  ExampleView.tsx  Home.tsx  Server.tsx
