[package]
name = "osu-server-connector"
version = "0.1.0"
description = "O.S.C - osu! Server Connector"
authors = ["pure-peace"]
license = "MIT"
repository = "https://github.com/pure-peace/osu-server-connector"
default-run = "osu-server-connector"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["api-all"] }
msgbox = "0.7"
open = "3.0"
tauri-runtime = "0.10"
chrono = "0.4"
rust-i18n = "0.6"
sys-locale = "0.2"
once_cell = "1.13.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true
